# agentic

web_summarizer/: README.md  pyproject.toml  report.md
web_summarizer/.gradio/flagged/: dataset1.csv
web_summarizer/src/web_summarizer/: crew.py  main.py
web_summarizer/src/web_summarizer/config/: agents.yaml  tasks.yaml
