[project]
name = "web_summarizer"
version = "0.1.0"
description = "web_summarizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "gradio>=6.6.0",
]

[project.scripts]
web_summarizer = "web_summarizer.main:run"
run_crew = "web_summarizer.main:run"
train = "web_summarizer.main:train"
replay = "web_summarizer.main:replay"
test = "web_summarizer.main:test"
run_with_trigger = "web_summarizer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
